[project]
name = "bayesian-structure-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "gurobipy>=12.0.3",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pgmpy>=1.0.0",
    "pygobnilp>=1.0",
    "pygraphviz>=1.14",
    "pyparsing>=3.2.5",
    "scikit-learn>=1.7.2",
]
